--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -76,7 +76,7 @@ h1 {
 }
 
 aside {
-	z-index: 999999999;
+	z-index: 200;
 	position: fixed;
     width: 276px;
     padding-left: 12px;
